# aether

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  test-keychain-fix.sh  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.gsd/: DECISIONS.md
.gsd/milestones/M001/: M001-RESEARCH.md  (+1 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
site/: package-lock.json  package.json  svelte.config.js
site/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
site/src/: app.css  app.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/chat/: document.rs  message.rs  mod.rs  protocol.rs  storage.rs  sync.rs
src-tauri/src/commands/: channel.rs  chat.rs  contacts.rs  identity.rs  mod.rs  moderation.rs  network.rs  swarm.rs  unread.rs  voice.rs
src-tauri/src/contacts/: mod.rs  storage.rs
src-tauri/src/identity/: display.rs  keychain_acl.rs  keypair.rs  mod.rs  storage.rs
src-tauri/src/moderation/: mod.rs  storage.rs
src-tauri/src/network/: behaviour.rs  mod.rs  peer_state.rs  swarm.rs
src-tauri/src/swarm/: key.rs  metadata_doc.rs  metadata_storage.rs  metadata_sync.rs  mod.rs  storage.rs  uri.rs
src-tauri/src/voice/: capture.rs  codec.rs  jitter_buffer.rs  mixer.rs  mod.rs  playback.rs  protocol.rs  session.rs
src/lib/: tauri.ts
(+321 files in other folders)
