[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
keyring = { version = "3", features = ["apple-native"] }
rand = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
hex = "0.4"
libp2p = { version = "0.56", features = ["kad", "mdns", "relay", "dcutr", "autonat", "identify", "ping", "quic", "tcp", "noise", "yamux", "tokio", "macros", "ed25519", "pnet"] }
libp2p-stream = "0.4.0-alpha"
futures = "0.3"
tauri-plugin-store = "2"
sha2 = "0.10"
cpal = "0.17"
opus = "0.3"
crossbeam-channel = "0.5"
